@@ -190,4 +190,8 @@ class Issue < ActiveRecord::Base
   def overdue?
     due_date.try(:past?) || false
   end
+
+  def saved
+    valid?
+  end
 end
